--- a/Source/Controls/WFTitleBox.xaml
+++ b/Source/Controls/WFTitleBox.xaml
@@ -11,10 +11,10 @@
 
     <Canvas x:Name="_canvas">
 
-        <Rectangle x:Name="_box" Stroke="#CCD3D3D3" Fill="Transparent" />
+        <Rectangle x:Name="_box" Stroke="#FF011B8D" Fill="Transparent" />
 
-        <Border x:Name="_textBorder" Background="#CCD3D3D3" Width="75" Height="18" CornerRadius="5, 5, 0, 0">
-            <TextBlock x:Name="_textBlock" Text="0x0" Foreground="#CC000000" FontSize="12" FontFamily="Courier New" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Border x:Name="_textBorder" Background="#FF011B8D" Width="75" Height="18" CornerRadius="5, 5, 0, 0">
+            <TextBlock x:Name="_textBlock" Text="0x0" Foreground="White" FontSize="12" FontFamily="Courier New" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Border>
 
     </Canvas>
