implemented SizeBox visually
now WFTitleBox can be swapped with WFSizeBox in HighLightElementState

--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -41,6 +41,8 @@
 
             <local:WFActionTip x:Name="_actionTip" Visibility="Collapsed" />
 
+            <local:WFSizeBox x:Name="_sizeBox" Visibility="Collapsed" />
+
         </Canvas>
 
     </Grid>
