updated WFSizeBox with 4 hit boxes
corrected panState to accomodate hitbox cursor change

--- a/Source/Controls/WFSizeBox.xaml
+++ b/Source/Controls/WFSizeBox.xaml
@@ -12,7 +12,11 @@
     <Canvas x:Name="_canvas">
 
         <Rectangle x:Name="_box" Width="100" Height="100" Stroke="#FF011B8D" StrokeThickness="1" Fill="Transparent" />
-        <Rectangle x:Name="_hit_box" Canvas.Left="-5" Canvas.Top="-5" Width="110" Height="110" Stroke="#7FFF0000" StrokeThickness="10" Fill="Transparent" />
+
+        <Rectangle x:Name="_left_box" Canvas.Left="-5" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_right_box" Canvas.Left="95" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_top_box" Canvas.Left="0" Canvas.Top="-5" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_bottom_box" Canvas.Left="0" Canvas.Top="95" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
 
         <Ellipse x:Name="_top_left_circle" Canvas.Left="-5" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
         <Ellipse x:Name="_top_right_circle" Canvas.Left="95" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
