added a dummy WFRotationControl

--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -43,6 +43,8 @@
 
             <local:WFSizeBox x:Name="_sizeBox" Visibility="Collapsed" />
 
+            <local:WFRotationControl />
+
         </Canvas>
 
     </Grid>
