--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -43,7 +43,7 @@
 
             <local:WFSizeBox x:Name="_sizeBox" Visibility="Collapsed" />
 
-            <local:WFRotationControl />
+            <local:WFRotationControl x:Name="_rotationControl" />
 
         </Canvas>
 
