added Fill and Stroke property for shapes

--- a/Source/Shapes/RectangleShape.xaml
+++ b/Source/Shapes/RectangleShape.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="400">
 
     <Grid>
-        <Path x:Name="_path" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="Blue" Fill="AliceBlue" Stretch="{x:Bind Stretch, Mode=OneWay}">
+        <Path x:Name="_path" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="{x:Bind Stroke, Mode=OneWay}" Fill="{x:Bind Fill, Mode=OneWay}" Stretch="{x:Bind Stretch, Mode=OneWay}">
             <Path.Data>
                 <GeometryGroup>
                     <RectangleGeometry Rect="0,0,100,100" />
