--- a/Source/Shapes/RectangleShape.xaml
+++ b/Source/Shapes/RectangleShape.xaml
@@ -9,14 +9,22 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid>
-        <Path x:Name="_path" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="{x:Bind Stroke, Mode=OneWay}" Fill="{x:Bind Fill, Mode=OneWay}" Stretch="{x:Bind Stretch, Mode=OneWay}">
+    <Canvas>
+        <Path
+            x:Name="_path"
+            Canvas.Left="{x:Bind Left, Mode=OneWay}" 
+            Canvas.Top="{x:Bind Top, Mode=OneWay}"
+            Width="{x:Bind Length, Mode=OneWay}"
+            Height="{x:Bind Breath, Mode=OneWay}"
+            Stroke="{x:Bind Stroke, Mode=OneWay}"
+            Fill="{x:Bind Fill, Mode=OneWay}"
+            Stretch="{x:Bind Stretch, Mode=OneWay}">
             <Path.Data>
                 <GeometryGroup>
                     <RectangleGeometry Rect="0,0,100,100" />
                 </GeometryGroup>
             </Path.Data>
         </Path>
-    </Grid>
-    
+    </Canvas>
+
 </UserControl>
