--- a/Source/Controls/WFShapeHighlight.xaml
+++ b/Source/Controls/WFShapeHighlight.xaml
@@ -16,7 +16,9 @@
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
             Width="{x:Bind Length, Mode=OneWay}"
             Height="{x:Bind Breath, Mode=OneWay}"
-            Fill="#7F1122FF"
+            Stroke="Blue"
+            StrokeThickness="3"
+            Fill="#770000FF"
             Stretch="{x:Bind Stretch, Mode=OneWay}">
             <Path.Data>
                 <GeometryGroup x:Name="_geometry_group" FillRule="Nonzero">
