--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -43,9 +43,11 @@
 
             <local:WFSizeControl x:Name="_sizeControl" Visibility="Collapsed" />
 
-            <local:WFRotationControl x:Name="_rotationControl" />
+            <local:WFRotationControl x:Name="_rotationControl" Visibility="Collapsed" />
 
-            <local:WFShapeHighlight x:Name="_shapeHighlight" IsHitTestVisible="False" />
+            <local:WFShapeHighlight x:Name="_shapeHighlight" Fill="#770000FF" IsHitTestVisible="False" Visibility="Collapsed" />
+
+            <local:WFShapeHighlight x:Name="_shapeSelect" Stroke="#FF0000FF" StrokeThickness="3.0" Fill="#770000FF" IsHitTestVisible="False" Visibility="Collapsed" />
 
         </Canvas>
 
