--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -43,7 +43,7 @@
 
             <local:WFSizeControl x:Name="_sizeControl" Visibility="Collapsed" />
 
-            <local:WFRotationControl x:Name="_rotationControl" Visibility="Collapsed" />
+            <local:WFRotationControl x:Name="_rotationControl" Visibility="Visible" />
 
             <local:WFShapeHighlight x:Name="_shapeHighlight" Fill="#770000FF" IsHitTestVisible="False" Visibility="Collapsed" />
 
