--- a/Source/Shapes/RectangleShape.xaml
+++ b/Source/Shapes/RectangleShape.xaml
@@ -10,21 +10,24 @@
     d:DesignWidth="400">
 
     <Canvas>
-        <Path
-            x:Name="_path"
+        <Viewbox
+            x:Name="_viewbox"
             Canvas.Left="{x:Bind Left, Mode=OneWay}" 
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
             Width="{x:Bind Length, Mode=OneWay}"
             Height="{x:Bind Breath, Mode=OneWay}"
-            Stroke="{x:Bind Stroke, Mode=OneWay}"
-            Fill="{x:Bind Fill, Mode=OneWay}"
             Stretch="{x:Bind Stretch, Mode=OneWay}">
-            <Path.Data>
-                <GeometryGroup>
-                    <RectangleGeometry x:Name="_rectGeometry" Rect="0,0,100,100" />
-                </GeometryGroup>
-            </Path.Data>
-        </Path>
+            <Path
+                x:Name="_path"            
+                Stroke="{x:Bind Stroke, Mode=OneWay}"
+                Fill="{x:Bind Fill, Mode=OneWay}">
+                <Path.Data>
+                    <GeometryGroup>
+                        <RectangleGeometry x:Name="_rectGeometry" Rect="0,0,100,100" />
+                    </GeometryGroup>
+                </Path.Data>
+            </Path>
+        </Viewbox>
     </Canvas>
 
 </UserControl>
