--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -23,11 +23,11 @@
 
                 <Canvas x:Name="_container">
 
-                    <shapes:CompoundShape Stroke="DarkGreen" Fill="GreenYellow" Left="1000" Top="300" Length="200" Breath="100" FillRule="Nonzero"/>
-                    <shapes:CompoundShape Stroke="DarkOrange" Fill="Orange" Left="1500" Top="200" Length="30" Breath="50"/>
-                    <shapes:EllipseShape Stroke="DeepPink" Fill="Pink" Left="1200" Top="800" Length="120" Breath="60"/>
-                    <shapes:CompoundShape Stroke="Transparent" Fill="DarkKhaki" Left="1800" Top="500" Length="30" Breath="30" FillRule="Nonzero"/>
-                    <shapes:RectangleShape Stroke="Cyan" Fill="DarkCyan" Left="700" Top="700" Length="60" Breath="100"/>
+                    <shapes:CompoundShape Stroke="DarkGreen" Fill="GreenYellow" Left="1000" Top="300" Length="200" Breath="100" FillRule="Nonzero" Stretch="Fill"/>
+                    <shapes:CompoundShape Stroke="DarkOrange" Fill="Orange" Left="1500" Top="200" Length="30" Breath="50" Stretch="Fill"/>
+                    <shapes:EllipseShape Stroke="DeepPink" Fill="Pink" Left="1200" Top="800" Length="120" Breath="60" Stretch="Fill"/>
+                    <shapes:CompoundShape Stroke="Transparent" Fill="DarkKhaki" Left="1800" Top="500" Length="30" Breath="30" FillRule="Nonzero" Stretch="Fill"/>
+                    <shapes:RectangleShape Stroke="Cyan" Fill="DarkCyan" Left="700" Top="700" Length="60" Breath="100" Stretch="Fill"/>
 
                 </Canvas>
 
