--- a/Source/Shapes/CompoundShape.xaml
+++ b/Source/Shapes/CompoundShape.xaml
@@ -16,11 +16,12 @@
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
             Width="{x:Bind Length, Mode=OneWay}"
             Height="{x:Bind Breath, Mode=OneWay}"
-            Stretch="{x:Bind Stretch, Mode=OneWay}">
+            Stretch="{x:Bind ViewStretch, Mode=OneWay}">
             <Path 
                 x:Name="_path"
                 Stroke="{x:Bind Stroke, Mode=OneWay}"
-                Fill="{x:Bind Fill, Mode=OneWay}">
+                Fill="{x:Bind Fill, Mode=OneWay}"
+                Stretch="{x:Bind PathStretch, Mode=OneWay}">
                 <Path.Data>
                     <GeometryGroup FillRule="{x:Bind FillRule, Mode=OneWay}">
                         <EllipseGeometry Center="100, 100" RadiusX="100" RadiusY="100" />
