--- a/Source/Shapes/RectangleShape.xaml
+++ b/Source/Shapes/RectangleShape.xaml
@@ -16,13 +16,14 @@
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
             Width="{x:Bind Length, Mode=OneWay}"
             Height="{x:Bind Breath, Mode=OneWay}"
-            Stretch="{x:Bind Stretch, Mode=OneWay}">
+            Stretch="{x:Bind ViewStretch, Mode=OneWay}">
             <Path
                 x:Name="_path"            
                 Stroke="{x:Bind Stroke, Mode=OneWay}"
-                Fill="{x:Bind Fill, Mode=OneWay}">
+                Fill="{x:Bind Fill, Mode=OneWay}"
+                Stretch="{x:Bind PathStretch, Mode=OneWay}">
                 <Path.Data>
-                    <GeometryGroup>
+                    <GeometryGroup FillRule="{x:Bind FillRule, Mode=OneWay}">
                         <RectangleGeometry x:Name="_rectGeometry" Rect="0,0,100,100" />
                     </GeometryGroup>
                 </Path.Data>
