--- a/Source/Controls/WFShapeHighlight.xaml
+++ b/Source/Controls/WFShapeHighlight.xaml
@@ -9,26 +9,8 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Canvas>
-        <Viewbox
-            x:Name="_viewbox"
-            Canvas.Left="{x:Bind Left, Mode=OneWay}" 
-            Canvas.Top="{x:Bind Top, Mode=OneWay}"
-            Width="{x:Bind Length, Mode=OneWay}"
-            Height="{x:Bind Breath, Mode=OneWay}"
-            Stretch="{x:Bind ViewStretch, Mode=OneWay}">
-            <Path 
-                x:Name="_path"
-                Stroke="{x:Bind Stroke, Mode=OneWay}"
-                StrokeThickness="{x:Bind StrokeThickness, Mode=OneWay}"
-                Fill="{x:Bind Fill, Mode=OneWay}"
-                Stretch="{x:Bind PathStretch, Mode=OneWay}">
-                <Path.Data>
-                    <GeometryGroup x:Name="_geometry_group" FillRule="Nonzero">
-                    </GeometryGroup>
-                </Path.Data>
-            </Path>
-        </Viewbox>
+    <Canvas x:Name="_canvas">
+        
     </Canvas>
     
 </UserControl>
