--- a/Source/Controls/MoveResizeControl.xaml
+++ b/Source/Controls/MoveResizeControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="WireFrame.Controls.WFSizeControl"
+    x:Class="WireFrame.Controls.MoveResizeControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WireFrame.Controls"
