--- a/Source/Controls/ShapeSelectionControl.xaml
+++ b/Source/Controls/ShapeSelectionControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="WireFrame.Controls.ShapeHighlight"
+    x:Class="WireFrame.Controls.ShapeSelectionControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WireFrame.Controls"
@@ -10,7 +10,7 @@
     d:DesignWidth="400">
 
     <Canvas x:Name="_canvas">
-        
+
     </Canvas>
-    
+
 </UserControl>
