--- a/Source/Controls/MoveResizeControl.xaml
+++ b/Source/Controls/MoveResizeControl.xaml
@@ -13,10 +13,10 @@
 
         <Rectangle x:Name="_box" Width="100" Height="100" Stroke="#FF011B8D" StrokeThickness="1" Fill="Transparent" />
 
-        <Rectangle x:Name="_left_box" Canvas.Left="-5" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
-        <Rectangle x:Name="_right_box" Canvas.Left="95" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
-        <Rectangle x:Name="_top_box" Canvas.Left="0" Canvas.Top="-5" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
-        <Rectangle x:Name="_bottom_box" Canvas.Left="0" Canvas.Top="95" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_left_bar" Canvas.Left="-5" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_right_bar" Canvas.Left="95" Canvas.Top="0" Width="10" Height="100" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_top_bar" Canvas.Left="0" Canvas.Top="-5" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
+        <Rectangle x:Name="_bottom_bar" Canvas.Left="0" Canvas.Top="95" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
 
         <Ellipse x:Name="_top_left_circle" Canvas.Left="-5" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
         <Ellipse x:Name="_top_right_circle" Canvas.Left="95" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
