--- a/Source/Controls/MoveResizeControl.xaml
+++ b/Source/Controls/MoveResizeControl.xaml
@@ -18,6 +18,11 @@
         <Rectangle x:Name="_top_bar" Canvas.Left="0" Canvas.Top="-5" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
         <Rectangle x:Name="_bottom_bar" Canvas.Left="0" Canvas.Top="95" Width="100" Height="10" Fill="Transparent" IsHitTestVisible="True" />
 
+        <Rectangle x:Name="_left_sqr" Canvas.Left="-5" Canvas.Top="45" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
+        <Rectangle x:Name="_right_sqr" Canvas.Left="95" Canvas.Top="45" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
+        <Rectangle x:Name="_top_sqr" Canvas.Left="45" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
+        <Rectangle x:Name="_bottom_sqr" Canvas.Left="45" Canvas.Top="95" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
+
         <Ellipse x:Name="_top_left_circle" Canvas.Left="-5" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
         <Ellipse x:Name="_top_right_circle" Canvas.Left="95" Canvas.Top="-5" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
         <Ellipse x:Name="_bottom_left_circle" Canvas.Left="-5" Canvas.Top="95" Width="10" Height="10" Stroke="#FF011B8D" Fill="AliceBlue"/>
